--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dependencies": {
         "@vercel/postgres": "^0.10.0",
         "bcrypt": "^5.1.1",
-        "bootstrap": "^5.3.3",
         "next": "^15.0.3",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-dom": "19.0.0-rc-66855b96-20241106"
@@ -20,6 +19,9 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
         "typescript": "^5"
     }
 }
